feat: delisting a commodity
