# swagger.json
@@ -404,6 +404,52 @@
          }
        }
      },
+     "/funderjet/api/commodity/delist": {
+      "post": {
+        "tags": [
+          "Commodities"
+        ],
+        "summary": "Delist a commodity - should be used only by commodity owners",
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "properties": {
+                  "commodityId": {
+                    "type": "string",
+                    "example": "COM1657067726910"
+                  },
+                  "newOwner": {
+                    "type": "string",
+                    "example": "Kelvin"
+                  },
+                  "newOwnerId": {
+                    "type": "integer",
+                    "example": "845"
+                  },
+                  "status": {
+                    "type": "string",
+                    "example": "SOLD"
+                  },
+                  "quantityRequested": {
+                    "type": "integer",
+                    "example": "5"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
      "/funderjet/api/commodity": {
        "post": {
          "tags": [
